# DiabetO

./: .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt
src/backend/: Model.ipynb  diabetes_prediction_dataset.csv  main.py  model.py  model2.ipynb  model2.py
src/frontend/: main.py
src/frontend/static/: connect.js  index.html  style.css
