[tool.poetry]
name = "DiabetO"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.0"
fastapi = "<0.102.0"
uvicorn = "^0.27.1"
aiohttp = {extras = ["speedups"], version = "^3.9.3"}
flet = "^0.22.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
